--- a/views/enterData.handlebars
+++ b/views/enterData.handlebars
@@ -1,6 +1,9 @@
-<h1>Citizen Scientists</h1>
 
-<form class="new_submission" id="new_submission" action="/thankyou" accept-charset="UTF-8" method="post">
+<div class = "header">
+  <h1>Citizen Scientists</h1>
+</div>
+
+<form class="new_submission" id="new_submission" action="the api link" accept-charset="UTF-8" method="post">
 
 <p>
   <input placeholder="info" type="text" name="name" id="cat_name" /><br><br>
